# HelloGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
graphics/: Shader.cpp  Shader.h  Window.cpp  Window.h
inputs/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
maths/: Mat4.cpp  Mat4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/graphics/: Shader.cpp  Shader.h  Window.cpp  Window.h
src/graphics/buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  iBuffer.h
src/graphics/renderers/: BatchRenderer2D.cpp  BatchRenderer2D.h  Renderable2D.cpp  Renderable2D.h  Sprite2D.cpp  Sprite2D.h  iRenderer2D.h
src/inputs/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/maths/: Mat4.cpp  Mat4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/utils/: File.cpp  File.h
src/utils/shaders/: simple.fsh  simple.vsh
utils/: File.cpp  File.h
utils/shaders/: simple.fsh  simple.vsh
